@@ -235,7 +235,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void noUri() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
-		new ApiListenerBuilder("test", Methods.GET).build();
+		new ApiListenerBuilder("test", List.of(Methods.GET)).build();
 
 		// Act
 		Response result = service(createRequest(null, Methods.GET));
@@ -248,7 +248,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void uriNotFound() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
-		new ApiListenerBuilder("test", Methods.GET).build();
+		new ApiListenerBuilder("test", List.of(Methods.GET)).build();
 
 		// Act
 		Response result = service(createRequest("/not-test", Methods.GET));
@@ -261,7 +261,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void methodNotAllowed() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/test";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Response result = service(createRequest(uri, Methods.PUT));
 		assertEquals(405, result.getStatus());
@@ -271,7 +271,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void simpleGet() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/test1";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Response result = service(createRequest(uri, Methods.GET));
 		assertEquals(200, result.getStatus());
@@ -282,7 +282,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void simpleGetMultiMethod() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/test1";
-		new ApiListenerBuilder(uri, Arrays.asList(Methods.GET, Methods.POST)).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET, Methods.POST)).build();
 
 		Response result = service(createRequest(uri, Methods.GET));
 		assertEquals(200, result.getStatus());
@@ -307,7 +307,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void simpleGetWithSlashes() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/test2";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Response result = service(createRequest(uri, Methods.GET));
 		assertEquals(200, result.getStatus());
@@ -318,7 +318,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void preFlightRequest() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/preflight/";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Response result = service(createRequest(uri, Methods.OPTIONS));
 		assertEquals(200, result.getStatus());
@@ -333,7 +333,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void preFlightRequestWithRequestHeader() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/preflight/";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Access-Control-Request-Headers", "Message-Id,CustomHeader");
@@ -351,7 +351,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void corsGetRequest() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/not-preflight/";
-		new ApiListenerBuilder(uri, Methods.POST).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("origin", "https://frankframework.org");
@@ -371,7 +371,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void apiListenerThatProducesXML() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/ApiListenerThatProducesXML/";
-		new ApiListenerBuilder(uri, Methods.PUT, null, MediaTypes.XML).build();
+		new ApiListenerBuilder(uri, List.of(Methods.PUT), null, MediaTypes.XML).build();
 
 		Response result = service(createRequest(uri, Methods.PUT, "<xml>data</xml>"));
 		assertEquals(200, result.getStatus());
@@ -384,7 +384,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void apiListenerThatProducesJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/ApiListenerThatProducesJSON/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON).build();
 
 		Response result = service(createRequest(uri, Methods.POST, "{}"));
 		assertEquals(200, result.getStatus());
@@ -398,7 +398,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void apiListenerThatProducesJSONReturnsNoOutput() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerThatProducesJSONReturnsNoOutput/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON)
 			.withResponseContent("")
 			.build();
 		HttpServletRequest request = createRequest(uri, Methods.POST, "{}");
@@ -421,7 +421,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void apiListenerThatProducesJSONReturnsNoOutputEmptyStream() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerThatProducesJSONReturnsNoOutput/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON)
 			.withResponseContent(new ByteArrayInputStream(new byte[0]))
 			.build();
 		HttpServletRequest request = createRequest(uri, Methods.POST, "{}");
@@ -444,7 +444,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void apiListenerThatProducesJSONReturnsNoOutputEmptyReader() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerThatProducesJSONReturnsNoOutput/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON)
 			.withResponseContent(new StringReader(""))
 			.build();
 		HttpServletRequest request = createRequest(uri, Methods.POST, "{}");
@@ -467,7 +467,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void apiListenerThatProducesXMLReturnsNoOutputNonStringResultMessage() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerThatProducesXMLReturnsNoOutputNonStringResultMessage/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.XML).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.XML).build();
 		Map<String, String> headers = new HashMap<>();
 
 		HttpServletRequest request = createRequest(uri, Methods.POST, null, headers);
@@ -490,7 +490,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void clientAcceptHeaderDoesNotLikeJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/ApiListenerAllow/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON)
 			.build();
 
 		Map<String, String> headers = new HashMap<>();
@@ -508,7 +508,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void clientAcceptHeaderLovesJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/ApiListenerAllow/";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -523,7 +523,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerDoesNotLikeContentTypeJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerDoesNotAcceptContentType";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.XML, null).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.XML, null).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -536,7 +536,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerLovesContentTypeJSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerLovesContentTypeJSON";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.JSON, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.JSON, MediaTypes.JSON).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -553,7 +553,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void listenerRejectsRequestWithoutContentTypeHeaderWhenConsumesAttributeSet() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/listenerDoesNotAcceptRequestWithoutContentTypeHeader";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.XML, null).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.XML, null).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -571,7 +571,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void listenerAcceptsRequestWithoutContentTypeHeaderWhenConsumesAttributeNotSet() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri="/listenerAcceptsContentTypeJSON";
-		new ApiListenerBuilder(uri, Methods.POST, null, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), null, MediaTypes.JSON).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -591,7 +591,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerDetectContentTypeAndCharsetISO8859() throws Exception {
 		String uri="/listenerDetectMimeType";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.TEXT, MediaTypes.DETECT).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.TEXT, MediaTypes.DETECT).build();
 
 		URL url = ClassLoaderUtils.getResourceURL("/Util/MessageUtils/iso-8859-1.txt");
 		Message message = new UrlMessage(url);
@@ -609,7 +609,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentDetectContentTypeAndCharsetISO8859() throws Exception {
 		String uri="/listenerMultipartContent_DETECT";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.DETECT).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.DETECT).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.setBoundary("gc0p4Jq0M2Yt08jU534c0p");
@@ -633,7 +633,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentISO8859_JSON() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMultipartContent_JSON";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.setBoundary("gc0p4Jq0M2Yt08jU534c0p");
@@ -657,7 +657,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentISO8859_ANY() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMultipartContent_ANY";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.ANY).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.ANY).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.setBoundary("gc0p4Jq0M2Yt08jU534c0p");
@@ -681,7 +681,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentUTF8() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMultipartContentCharset";
-		new ApiListenerBuilder(uri, Arrays.asList(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON, null, "string2").build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON, null, "string2").build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.addTextBody("string1", "<hallo>€ è</hallo>", ContentType.create("text/plain"));
@@ -713,7 +713,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMtomContent() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMtomContent";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART_RELATED, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART_RELATED, MediaTypes.JSON).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.setMtomMultipart();
@@ -744,7 +744,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void listenerMultipartContentNoContentType() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/listenerMultipartContentNoContentType";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		builder.addTextBody("string1", "<request/>", ContentType.create("text/xml"));//explicitly sent as UTF-8
@@ -763,7 +763,7 @@ public class ApiListenerServletTest extends Mockito {
 
 		// Arrange
 		String uri="/listenerMultipartContentNoContent";
-		new ApiListenerBuilder(uri, Methods.POST, MediaTypes.MULTIPART, MediaTypes.JSON).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), MediaTypes.MULTIPART, MediaTypes.JSON).build();
 
 		MultipartEntityBuilder builder = MultipartEntityBuilder.create();
 		HttpServletRequest request = createRequest(uri, Methods.POST, builder.build());
@@ -780,7 +780,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void getRequestWithQueryParameters() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/queryParamTest";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -797,7 +797,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void getRequestWithQueryListParameters() throws Exception {
 		String uri="/queryParamTestWithListsItems";
-		new ApiListenerBuilder(uri, Methods.GET).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -806,7 +806,7 @@ public class ApiListenerServletTest extends Mockito {
 
 		assertEquals(200, result.getStatus());
 		assertEquals("60", session.get("maxSpeed"));
-		List<String> transportList = Arrays.asList("car","bike","moped");
+		List<String> transportList = List.of("car","bike","moped");
 		assertEquals(transportList, session.get("transport"));
 		assertEquals("OPTIONS, GET", result.getHeader("Allow"));
 		assertNull(result.getErrorMessage());
@@ -815,7 +815,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void getRequestWithDynamicPath() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/dynamic/";
-		new ApiListenerBuilder(uri+"{poef}", Methods.GET).build();
+		new ApiListenerBuilder(uri+"{poef}", List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -831,7 +831,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void getRequestWithAsteriskPath() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/dynamic/";
-		new ApiListenerBuilder(uri+"*", Methods.GET).build();
+		new ApiListenerBuilder(uri+"*", List.of(Methods.GET)).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Accept", "application/json");
@@ -847,7 +847,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void customExitCode() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri="/exitcode";
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withExitCode(234)
 			.build();
 
@@ -866,7 +866,7 @@ public class ApiListenerServletTest extends Mockito {
 		// Arrange
 		String uri="/etag1";
 		Message repeatableMessage = new Message("{\"tralalalallala\":true}", new MessageContext().withModificationTime(DateFormatUtils.parseToInstant("2023-01-13 14:02:00", DateFormatUtils.GENERIC_DATETIME_FORMATTER)));
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withResponseContent(repeatableMessage)
 			.setUpdateEtag(true)
 			.build();
@@ -893,7 +893,7 @@ public class ApiListenerServletTest extends Mockito {
 		// Arrange
 		String uri="/etag2";
 		Message repeatableMessage = Message.asMessage(new Message("{\"tralalalallala\":true}").asByteArray());
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withResponseContent(repeatableMessage)
 			.build();
 
@@ -917,7 +917,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void eTagGetEtagMatches() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri = "/etag31";
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withExitCode(201)
 			.withResponseContent("{\"tralalalallala\":true}")
 			.build();
@@ -941,7 +941,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void eTagGetEtagDoesNotMatch() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri = "/etag32";
-		new ApiListenerBuilder(uri, Methods.GET)
+		new ApiListenerBuilder(uri, List.of(Methods.GET))
 			.withResponseContent("{\"tralalalallala\":true}")
 			.build();
 		String etagCacheKey = ApiCacheManager.buildCacheKey(uri);
@@ -963,7 +963,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void eTagPostEtagIfMatches() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/etag45";
-		new ApiListenerBuilder(uri, Methods.POST).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST)).build();
 		String etagCacheKey = ApiCacheManager.buildCacheKey(uri);
 		ApiCacheManager.getInstance().put(etagCacheKey, "my-etag-value");
 
@@ -980,7 +980,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void eTagPostEtagDoesNotMatch() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/etag46";
-		new ApiListenerBuilder(uri, Methods.POST).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST)).build();
 		String etagCacheKey = ApiCacheManager.buildCacheKey(uri);
 		ApiCacheManager.getInstance().put(etagCacheKey, "my-etag-value");
 
@@ -997,7 +997,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void cookieAuthentication401() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/cookie";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.COOKIE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.COOKIE).build();
 
 		Map<String, String> headers = new HashMap<>();
 		Response result = service(createRequest(uri, Methods.POST, "{\"tralalalallala\":true}", headers));
@@ -1011,7 +1011,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void cookieNotFoundInCache401() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/cookie";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.COOKIE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.COOKIE).build();
 
 		Map<String, String> headers = new HashMap<>();
 		MockHttpServletRequest request = createRequest(uri, Methods.POST, "{\"tralalalallala\":true}", headers);
@@ -1028,7 +1028,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void cookieAuthentication200() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/cookie";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.COOKIE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.COOKIE).build();
 		String authToken = "random-token_thing";
 
 		ApiPrincipal principal = new ApiPrincipal();
@@ -1054,7 +1054,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void headerAuthentication401() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/cookie";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.HEADER).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.HEADER).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Authorization", "blalablaaaa");
@@ -1069,7 +1069,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void headerAuthentication200() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/header";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.HEADER).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.HEADER).build();
 		String authToken = "random-token_thing";
 
 		ApiPrincipal principal = new ApiPrincipal();
@@ -1092,7 +1092,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void authRoleAuthentication401() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/authRole2";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.AUTHROLE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.AUTHROLE).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Authorization", "am9objpkb2U=");
@@ -1112,7 +1112,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void authRoleAuthentication200() throws ServletException, IOException, ListenerException, ConfigurationException {
 		String uri = "/authRole2";
-		new ApiListenerBuilder(uri, Methods.POST, AuthMethods.AUTHROLE).build();
+		new ApiListenerBuilder(uri, List.of(Methods.POST), AuthMethods.AUTHROLE).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("Authorization", "am9objpkb2U=");
@@ -1132,7 +1132,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void testRequestWithMessageId() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri = "/messageIdTest1";
-		new ApiListenerBuilder(uri, Methods.POST)
+		new ApiListenerBuilder(uri, List.of(Methods.POST))
 			.setMessageIdHeader("X-Message-ID")
 			.setCorrelationIdHeader("X-Correlation-ID")
 			.build();
@@ -1157,7 +1157,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void testRequestWithMessageIdAndCorrelationId() throws ServletException, IOException, ListenerException, ConfigurationException {
 		// Arrange
 		String uri = "/messageIdTest2";
-		new ApiListenerBuilder(uri, Methods.POST)
+		new ApiListenerBuilder(uri, List.of(Methods.POST))
 			.setMessageIdHeader("X-Message-ID")
 			.setCorrelationIdHeader("X-Correlation-ID")
 			.build();
@@ -1187,7 +1187,7 @@ public class ApiListenerServletTest extends Mockito {
 
 		// Arrange
 		String uri = "/messageWithJson2XmlValidator";
-		new ApiListenerBuilder(uri, method, null, MediaTypes.XML).build();
+		new ApiListenerBuilder(uri, List.of(method), null, MediaTypes.XML).build();
 
 		Map<String, String> headers = new HashMap<>();
 		headers.put("accept", "application/xml");
@@ -1220,7 +1220,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void setupParseAcceptHeaderAndValidateProduces(String acceptHeaderValue, MediaTypes produces) throws Exception {
 		// Arrange
 		String uri = "/messageWithAcceptHeaderAndProduces"+produces;
-		new ApiListenerBuilder(uri, Methods.GET, null, produces).build();
+		new ApiListenerBuilder(uri, List.of(Methods.GET), null, produces).build();
 
 		Map<String, String> headers = new HashMap<>();
 		if(acceptHeaderValue != null) {
@@ -1241,7 +1241,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void testEndpointDoesNotAcceptHeader(String acceptHeaderValue) throws Exception {
 		// Arrange
 		String uri = "/messageThatDoesNotAcceptAcceptHeader";
-		new ApiListenerBuilder(uri, Methods.GET, null, MediaTypes.JSON)
+		new ApiListenerBuilder(uri, List.of(Methods.GET), null, MediaTypes.JSON)
 			.build();
 
 		Map<String, String> headers = new HashMap<>();
@@ -1261,7 +1261,7 @@ public class ApiListenerServletTest extends Mockito {
 	public void testRequestExceptionHandling() throws Exception {
 		// Arrange
 		String uri = "/testThrowsError";
-		new ApiListenerBuilder(uri, Methods.GET, null, null)
+		new ApiListenerBuilder(uri, List.of(Methods.GET), null, null)
 			.withShouldThrow(true)
 			.build();
 
@@ -1277,7 +1277,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithRequiredIssuer() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setAuthenticationMethod(AuthenticationMethods.JWT)
@@ -1293,7 +1293,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithoutRequiredIssuer() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setAuthenticationMethod(AuthenticationMethods.JWT)
 			.build();
@@ -1308,7 +1308,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithIllegalRequiredIssuer() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setAuthenticationMethod(AuthenticationMethods.JWT)
 			.setRequiredIssuer("test")
@@ -1324,7 +1324,7 @@ public class ApiListenerServletTest extends Mockito {
 	@Test
 	public void testJwtTokenParsingWithJwtHeader() throws Exception {
 		final String JWT_HEADER = "X-JWT-Assertion";
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 				.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 				.setRequiredIssuer("JWTPipeTest")
 				.setAuthenticationMethod(AuthenticationMethods.JWT)
@@ -1344,7 +1344,7 @@ public class ApiListenerServletTest extends Mockito {
 		String token="eyJhbGciOiJSUzI1NiJ9."
 				+ "eyJpc3MiOiJKV1RQaXBlVGVHzdCIsInN1YiI6IlVuaXRUZXN0IiwiYXVkIjoiRnJhbWV3b3JrIiwianRpIjoiMTIzNCJ9."
 				+ "U1VsMoITf5kUEHtzfgJTyRWEDZ2gjtTuQI3DVRrJcpden2pjCsAWwl4VOr6McmQkcndZj0GPvN4w3NkJR712ltlsIXw1zMm67vuFY0_id7TP2zIJh3jMkKrTuSPE-SBXZyVnIq22Q54R1VMnOTjO6spbrbYowIzyyeAC7U1RzyB3aKxTgeYJS6auLBaiR3-SWoXs_hBnbIIgYT7AC2e76ICpMlFPQS_e2bcqe1B-yz69se8ZlJgwWK-YhqHMoOCA9oQy3t_cObQI0KSzg7cYDkkQ17cWF3SoyTSTs6Cek_Y97Z17lJX2RVBayPc2uI_oWWuaIUbukxAOIUkgpgtf6g";
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 		.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 		.setAuthenticationMethod(AuthenticationMethods.JWT)
 		.build();
@@ -1362,7 +1362,7 @@ public class ApiListenerServletTest extends Mockito {
 		String token="eyJhbGciOiJSUzI1NiJ9."
 				+ "eyJpc3MiOiJKV1RQaXBlVGVzdCIsInN1YiI6IlVuaXRUZXN0IiwiYXVkIjoiRnJhbWV3b3JrIiwianRpIjoiMTIzNCJ9."
 				+ "U1VsMoITf5kUEHtzfgJTyRWKEDZ2gjtTuQI3DVRrJcpden2pjCsAWwl4VOr6McmQkcndZj0GPvN4w3NkJR712ltlsIXw1zMm67vuFY0_id7TP2zIJh3jMkKrTuSPE-SBXZyVnIq22Q54R1VMnOTjO6spbrbYowIzyyeAC7U1RzyB3aKxTgeYJS6auLBaiR3-SWoXs_hBnbIIgYT7AC2e76ICpMlFPQS_e2bcqe1B-yz69se8ZlJgwWK-YhqHMoOCA9oQy3t_cObQI0KSzg7cYDkkQ17cWF3SoyTSTs6Cek_Y97Z17lJX2RVBayPc2uI_oWWuaIUbukxAOIUkgpgtf6g";
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setAuthenticationMethod(AuthenticationMethods.JWT)
 			.build();
@@ -1377,7 +1377,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithRequiredClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setRequiredClaims("sub, aud")
@@ -1394,7 +1394,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithExactMatchClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setExactMatchClaims("sub=UnitTest, aud=Framework")
@@ -1411,7 +1411,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithAnyMatchClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setAnyMatchClaims("aud=nomatch, sub=UnitTest")
@@ -1428,7 +1428,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenParsingWithExactAndAnyMatchClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setExactMatchClaims("sub=UnitTest")
@@ -1446,7 +1446,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenMissingRequiredClaims() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setRequiredClaims("sub, aud, kid")
@@ -1462,7 +1462,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenUnexpectedValueForExactMatchClaim() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setExactMatchClaims("sub=UnitTest, aud=test")
@@ -1478,7 +1478,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenNoMatchForAnyMatchClaim() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setAnyMatchClaims("sub=test, aud=test")
@@ -1494,7 +1494,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenWithRoleClaim() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setRoleClaim("sub")
@@ -1510,7 +1510,7 @@ public class ApiListenerServletTest extends Mockito {
 
 	@Test
 	public void testJwtTokenWithRoleClaimAndEmptyAuthRoles() throws Exception {
-		new ApiListenerBuilder(JWT_VALIDATION_URI, Methods.GET)
+		new ApiListenerBuilder(JWT_VALIDATION_URI, List.of(Methods.GET))
 			.setJwksURL(TestFileUtils.getTestFileURL("/JWT/jwks.json").toString())
 			.setRequiredIssuer("JWTPipeTest")
 			.setRoleClaim("sub")
@@ -1717,18 +1717,6 @@ public class ApiListenerServletTest extends Mockito {
 
 		private final ApiListener listener;
 		private MessageHandler handler;
-
-		public ApiListenerBuilder(String uri, Methods method) throws ListenerException, ConfigurationException {
-			this(uri, method, null, null);
-		}
-
-		public ApiListenerBuilder(String uri, Methods method, AuthMethods authMethod) throws ListenerException, ConfigurationException {
-			this(uri, Arrays.asList(method), null, null, authMethod,null);
-		}
-
-		public ApiListenerBuilder(String uri, Methods method, MediaTypes consumes, MediaTypes produces) throws ListenerException, ConfigurationException {
-			this(uri, Arrays.asList(method), consumes, produces, null, null);
-		}
 
 		public ApiListenerBuilder(String uri, List<Methods> method) throws ListenerException, ConfigurationException {
 			this(uri, method, null, null);
